<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.bluetoothlegatt.SettingsActivity">

    <TextView
        android:id="@+id/setwheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Set_wheel" />

    <EditText
        android:id="@+id/edit_Wheel_Circumference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/setwheel"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/button_Set_Wheel_Circumference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_Wheel_Circumference"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/setwheel"
        android:onClick="SetWheelCircumferenceMethod"
        android:text="@string/Ok_SetWheelCircumference" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_Wheel_Circumference"
        android:text="@string/PowerSliderFullScale"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edit_MaxPowerSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_Wheel_Circumference"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView13"
        android:inputType="number" />

    <Button
        android:id="@+id/button_SetMaxPowerSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_MaxPowerSlider"
        android:layout_alignEnd="@+id/button_Set_Wheel_Circumference"
        android:layout_alignStart="@+id/button_Set_Wheel_Circumference"
        android:layout_below="@+id/edit_Wheel_Circumference"
        android:onClick="SetPowerSliderMaxMethod"
        android:text="@string/button_SetMaxPowerSlider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView_Version"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentRight="true"
        android:textSize="14sp" />

</RelativeLayout>
